@@ -53,6 +53,7 @@ struct _GstTTMLAttribute {
     GstTTMLSMPTEEncoding smpte_encoding;
     GstTTMLAttributeType removed_attribute_type;
     GstTTMLTimeBase time_base;
+    GstTTMLClockMode clock_mode;
   } value;
   GList *timeline;
 };
