@@ -43,6 +43,7 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_WHITESPACE_PRESERVE,
   GST_TTML_ATTR_SEQUENTIAL_TIME_CONTAINER,
   GST_TTML_ATTR_TIME_BASE,
+  GST_TTML_ATTR_CLOCK_MODE,
   /* Only Styling attributes beyond this point! */
   GST_TTML_ATTR_STYLE,
   GST_TTML_ATTR_STYLE_REMOVAL,
@@ -160,8 +161,16 @@ typedef enum _GstTTMLTimeBase {
   GST_TTML_TIME_BASE_MEDIA,
   GST_TTML_TIME_BASE_SMPTE,
   GST_TTML_TIME_BASE_CLOCK,
-  GST_TTML_TIME_BASE_UNKNOWN,
+  GST_TTML_TIME_BASE_UNKNOWN
 } GstTTMLTimeBase;
+
+/* Clock mode */
+typedef enum _GstTTMLClockMode {
+  GST_TTML_CLOCK_MODE_LOCAL,
+  GST_TTML_CLOCK_MODE_GPS,
+  GST_TTML_CLOCK_MODE_UTC,
+  GST_TTML_CLOCK_MODE_UNKNOWN
+} GstTTMLClockMode;
 
 /* SMPTE-TT Image types */
 typedef enum _GstTTMLSMPTEImageType {
